<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00DABABA"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_height="0dp"
        android:layout_width="wrap_content"
        android:background="@drawable/tictactoe"/>

    <Button
        android:id="@+id/players2"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1100dp"
        android:onClick="start2Players"
        android:shadowColor="#686767"
        android:shadowRadius="10"
        android:text="@string/player_2"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021"/>

    <Button
        android:id="@+id/highScores"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1100dp"
        android:onClick="highScores"
        android:shadowColor="#686767"
        android:shadowRadius="10"
        android:text="@string/high_scores"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <Button
        android:id="@+id/player1"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1100dp"
        android:onClick="start1Player"
        android:shadowColor="#686767"
        android:shadowRadius="10"
        android:text="@string/player_1"
        android:textSize="24sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/quit"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1100dp"
        android:onClick="quit"
        android:text="@string/quit"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="180dp"
        android:layout_height="45dp"
        android:layout_marginTop="1100dp"
        android:gravity="center"
        android:text="@string/version"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895" />

</androidx.constraintlayout.widget.ConstraintLayout>